list actions (reply, edit ) collapsed when Photos shown UI Fix

--- a/includes/assets/styles/components/_single-list.scss
+++ b/includes/assets/styles/components/_single-list.scss
@@ -4,6 +4,7 @@
         display: flex;
         margin: 1em 0;
         align-items: center;
+        clear: both;
         justify-content: space-between;
 
         .vote.likes-and-dislikes {
